@@ -2,18 +2,20 @@ package io.stargate.sgv2.jsonapi.service.operation.model.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
+import com.datastax.oss.driver.api.core.cql.AsyncResultSet;
+import com.datastax.oss.driver.api.core.cql.ColumnDefinitions;
+import com.datastax.oss.driver.api.core.cql.Row;
+import com.datastax.oss.driver.api.core.cql.SimpleStatement;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.TestProfile;
+import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.helpers.test.UniAssertSubscriber;
-import io.stargate.bridge.grpc.TypeSpecs;
-import io.stargate.bridge.grpc.Values;
-import io.stargate.bridge.proto.QueryOuterClass;
-import io.stargate.sgv2.api.common.config.QueriesConfig;
-import io.stargate.sgv2.common.bridge.AbstractValidatingStargateBridgeTest;
-import io.stargate.sgv2.common.bridge.ValidatingStargateBridge;
 import io.stargate.sgv2.common.testprofiles.NoGlobalResourcesTestProfile;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
@@ -22,102 +24,97 @@ import io.stargate.sgv2.jsonapi.exception.ErrorCode;
 import io.stargate.sgv2.jsonapi.exception.JsonApiException;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.CollectionSettings;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
-import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CustomValueSerializers;
+import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CQLBindValues;
 import io.stargate.sgv2.jsonapi.service.shredding.Shredder;
 import io.stargate.sgv2.jsonapi.service.shredding.model.DocumentId;
 import io.stargate.sgv2.jsonapi.service.shredding.model.WritableShreddedDocument;
+import io.stargate.sgv2.jsonapi.service.testutil.MockAsyncResultSet;
+import io.stargate.sgv2.jsonapi.service.testutil.MockRow;
 import jakarta.inject.Inject;
+import java.nio.ByteBuffer;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import org.apache.commons.lang3.RandomStringUtils;
-import org.junit.jupiter.api.Disabled;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 @QuarkusTest
-@Disabled
 @TestProfile(NoGlobalResourcesTestProfile.Impl.class)
-public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
-  private static final String KEYSPACE_NAME = RandomStringUtils.randomAlphanumeric(16);
-  private static final String COLLECTION_NAME = RandomStringUtils.randomAlphanumeric(16);
-  private static final CommandContext COMMAND_CONTEXT =
+public class InsertOperationTest extends OperationTestBase {
+  private final CommandContext COMMAND_CONTEXT_NON_VECTOR =
       new CommandContext(KEYSPACE_NAME, COLLECTION_NAME);
 
-  private static final CommandContext COMMAND_CONTEXT_VECTOR =
+  private final CommandContext COMMAND_CONTEXT_VECTOR =
       new CommandContext(
-          KEYSPACE_NAME, COLLECTION_NAME, true, CollectionSettings.SimilarityFunction.COSINE, null);
+          KEYSPACE_NAME,
+          COLLECTION_NAME,
+          new CollectionSettings(
+              COLLECTION_NAME,
+              true,
+              -1,
+              CollectionSettings.SimilarityFunction.COSINE,
+              null,
+              null,
+              null),
+          null);
+
+  private final ColumnDefinitions COLUMNS_APPLIED =
+      buildColumnDefs(TestColumn.ofBoolean("[applied]"));
 
   @Inject Shredder shredder;
   @Inject ObjectMapper objectMapper;
-  @Inject QueryExecutor queryExecutor;
-  @Inject QueriesConfig queriesConfig;
+
+  static final String INSERT_CQL =
+      "INSERT INTO \"%s\".\"%s\""
+          + " (key, tx_id, doc_json, exist_keys, array_size, array_contains, query_bool_values, query_dbl_values , query_text_values, query_null_values, query_timestamp_values)"
+          + " VALUES"
+          + " (?, now(), ?, ?, ?, ?, ?, ?, ?, ?, ?)  IF NOT EXISTS";
+
+  static final String INSERT_VECTOR_CQL =
+      "INSERT INTO \"%s\".\"%s\""
+          + " (key, tx_id, doc_json, exist_keys, array_size, array_contains, query_bool_values, query_dbl_values , query_text_values, query_null_values, query_timestamp_values, query_vector_value)"
+          + " VALUES"
+          + " (?, now(), ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)  IF NOT EXISTS";
 
   @Nested
-  class Execute {
-
-    static final String INSERT_CQL =
-        "INSERT INTO \"%s\".\"%s\""
-            + " (key, tx_id, doc_json, exist_keys, array_size, array_contains, query_bool_values, query_dbl_values , query_text_values, query_null_values, query_timestamp_values)"
-            + " VALUES"
-            + " (?, now(), ?, ?, ?, ?, ?, ?, ?, ?, ?)  IF NOT EXISTS";
-
-    static final String INSERT_VECTOR_CQL =
-        "INSERT INTO \"%s\".\"%s\""
-            + " (key, tx_id, doc_json, exist_keys, array_size, array_contains, query_bool_values, query_dbl_values , query_text_values, query_null_values, query_timestamp_values, query_vector_value)"
-            + " VALUES"
-            + " (?, now(), ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)  IF NOT EXISTS";
-
+  class InsertNonVector {
     @Test
     public void insertOne() throws Exception {
       String document =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"},
-            "date_val" : {"$date": 1672531200000 }
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"},
+                            "date_val" : {"$date": 1672531200000 }
+                          }
+                          """;
 
       JsonNode jsonNode = objectMapper.readTree(document);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt = nonVectorInsertStatement(shredDocument);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
 
-      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT, shredDocument);
+      when(queryExecutor.executeWrite(eq(insertStmt)))
+          .then(
+              invocation -> {
+                callCount.incrementAndGet();
+                return Uni.createFrom().item(results);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(COMMAND_CONTEXT_NON_VECTOR, shredDocument)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -125,7 +122,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -139,52 +136,36 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
     public void insertDuplicate() throws Exception {
       String doc1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
 
       final JsonNode jsonNode = objectMapper.readTree(doc1);
       final WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(false))));
+      SimpleStatement insertStmt = nonVectorInsertStatement(shredDocument);
+      // Note: FALSE is needed to "fail" insertion, producing failure message
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.FALSE));
+      AsyncResultSet results = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
 
-      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT, shredDocument);
+      when(queryExecutor.executeWrite(eq(insertStmt)))
+          .then(
+              invocation -> {
+                callCount.incrementAndGet();
+                return Uni.createFrom().item(results);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(COMMAND_CONTEXT_NON_VECTOR, shredDocument)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -192,7 +173,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -214,28 +195,28 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
     public void insertManyOrdered() throws Exception {
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
@@ -243,68 +224,31 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
-      ValidatingStargateBridge.QueryAssert insertSecondAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument2.id())),
-                  Values.of(shredDocument2.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument2.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument2.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument2.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument2.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument2.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument2.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), true);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results1 = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final List<Integer> calls = new ArrayList<>();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                calls.add(1);
+                return Uni.createFrom().item(results1);
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                calls.add(2);
+                return Uni.createFrom().item(results2);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), true)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -312,8 +256,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertFirstAssert.assertExecuteCount().isOne();
-      insertSecondAssert.assertExecuteCount().isOne();
+      assertThat(calls).isEqualTo(Arrays.asList(1, 2));
 
       // then result
       CommandResult result = execute.get();
@@ -329,28 +272,28 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
     public void insertManyUnordered() throws Exception {
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
@@ -358,68 +301,31 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
-      ValidatingStargateBridge.QueryAssert insertSecondAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument2.id())),
-                  Values.of(shredDocument2.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument2.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument2.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument2.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument2.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument2.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument2.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), false);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results1 = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().item(results1);
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().item(results2);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), false)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -427,8 +333,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertFirstAssert.assertExecuteCount().isOne();
-      insertSecondAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(2);
 
       // then result
       CommandResult result = execute.get();
@@ -444,31 +349,31 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
 
     @Test
     public void failureOrdered() throws Exception {
-      // unordered first query fail
+      // ordered first insert fails
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
@@ -476,40 +381,28 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returningFailure(new RuntimeException("Ivan breaks the test."));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), true);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().failure(new RuntimeException("Test break #1"));
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().item(Arrays.asList());
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), true)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -518,7 +411,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
 
       // assert query execution
       // second query never executed
-      insertFirstAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -528,38 +421,38 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
           .satisfies(
               error -> {
                 assertThat(error.message())
-                    .isEqualTo("Failed to insert document with _id 'doc1': Ivan breaks the test.");
+                    .isEqualTo("Failed to insert document with _id 'doc1': Test break #1");
                 assertThat(error.fields()).containsEntry("exceptionClass", "RuntimeException");
               });
     }
 
     @Test
     public void failureOrderedLastFails() throws Exception {
-      // unordered first query OK, second fail
+      // ordered first insert OK, second fail
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
@@ -567,78 +460,39 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
-      ValidatingStargateBridge.QueryAssert insertSecondAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument2.id())),
-                  Values.of(shredDocument2.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument2.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument2.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument2.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument2.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument2.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument2.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returningFailure(new RuntimeException("Ivan really breaks the test."));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), true);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet resultOk = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().item(resultOk);
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                callCount.addAndGet(1);
+                return Uni.createFrom().failure(new RuntimeException("Test break #2"));
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), true)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
               .awaitItem()
               .getItem();
 
-      // assert query execution
-      // second query never executed
-      insertFirstAssert.assertExecuteCount().isOne();
-      insertSecondAssert.assertExecuteCount().isOne();
+      // assert query execution: both executed (second failed)
+      assertThat(callCount.get()).isEqualTo(2);
 
       // then result contains both insert and error
       CommandResult result = execute.get();
@@ -650,8 +504,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
           .satisfies(
               error -> {
                 assertThat(error.message())
-                    .isEqualTo(
-                        "Failed to insert document with _id 'doc2': Ivan really breaks the test.");
+                    .isEqualTo("Failed to insert document with _id 'doc2': Test break #2");
                 assertThat(error.fields()).containsEntry("exceptionClass", "RuntimeException");
               });
     }
@@ -661,107 +514,69 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       // unordered one query fail
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
-
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returningFailure(new RuntimeException("Ivan breaks the test."));
-      ValidatingStargateBridge.QueryAssert insertSecondAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument2.id())),
-                  Values.of(shredDocument2.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument2.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument2.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument2.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument2.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument2.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument2.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), false);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet resultOk = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+
+      final AtomicInteger callCount1 = new AtomicInteger();
+      final AtomicInteger callCount2 = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                callCount1.addAndGet(1);
+                return Uni.createFrom().failure(new RuntimeException("Test break #1"));
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                callCount2.addAndGet(1);
+                return Uni.createFrom().item(resultOk);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), false)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
               .awaitItem()
               .getItem();
 
-      // assert query execution
-      // second query never executed
-      insertFirstAssert.assertExecuteCount().isOne();
-      insertSecondAssert.assertExecuteCount().isOne();
+      // assert query execution: both called
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount1.get()).isEqualTo(1);
 
       // then result has both insert id and errors
       CommandResult result = execute.get();
@@ -773,7 +588,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
           .satisfies(
               error -> {
                 assertThat(error.message())
-                    .isEqualTo("Failed to insert document with _id 'doc1': Ivan breaks the test.");
+                    .isEqualTo("Failed to insert document with _id 'doc1': Test break #1");
                 assertThat(error.fields()).containsEntry("exceptionClass", "RuntimeException");
               });
     }
@@ -783,28 +598,28 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       // unordered both queries fail
       String document1 =
           """
-          {
-            "_id": "doc1",
-            "text": "user1",
-            "number" : 10,
-            "boolean": true,
-            "nullval" : null,
-            "array" : ["a", "b"],
-            "sub_doc" : {"col": "val"}
-          }
-          """;
+                          {
+                            "_id": "doc1",
+                            "text": "user1",
+                            "number" : 10,
+                            "boolean": true,
+                            "nullval" : null,
+                            "array" : ["a", "b"],
+                            "sub_doc" : {"col": "val"}
+                          }
+                          """;
       String document2 =
           """
-          {
-            "_id": "doc2",
-            "text": "user2",
-            "number" : 11,
-            "boolean": false,
-            "nullval" : null,
-            "array" : ["c", "d"],
-            "sub_doc" : {"col": "lav"}
-          }
-          """;
+                          {
+                            "_id": "doc2",
+                            "text": "user2",
+                            "number" : 11,
+                            "boolean": false,
+                            "nullval" : null,
+                            "array" : ["c", "d"],
+                            "sub_doc" : {"col": "lav"}
+                          }
+                          """;
 
       JsonNode jsonNode1 = objectMapper.readTree(document1);
       WritableShreddedDocument shredDocument1 = shredder.shred(jsonNode1);
@@ -812,78 +627,41 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode2 = objectMapper.readTree(document2);
       WritableShreddedDocument shredDocument2 = shredder.shred(jsonNode2);
 
-      String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertFirstAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument1.id())),
-                  Values.of(shredDocument1.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument1.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument1.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument1.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument1.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument1.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument1.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument1.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returningFailure(new RuntimeException("Ivan breaks the test."));
-      ValidatingStargateBridge.QueryAssert insertSecondAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument2.id())),
-                  Values.of(shredDocument2.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument2.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument2.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument2.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(
-                          shredDocument2.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument2.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument2.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument2.queryTimestampValues())))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returningFailure(new RuntimeException("Ivan really breaks the test."));
+      SimpleStatement insertStmt1 = nonVectorInsertStatement(shredDocument1);
+      SimpleStatement insertStmt2 = nonVectorInsertStatement(shredDocument2);
 
-      InsertOperation operation =
-          new InsertOperation(COMMAND_CONTEXT, List.of(shredDocument1, shredDocument2), false);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet resultOk = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+
+      final AtomicInteger callCount1 = new AtomicInteger();
+      final AtomicInteger callCount2 = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      when(queryExecutor.executeWrite(eq(insertStmt1)))
+          .then(
+              invocation -> {
+                callCount1.addAndGet(1);
+                return Uni.createFrom().failure(new RuntimeException("Insert 1 failed"));
+              });
+      when(queryExecutor.executeWrite(eq(insertStmt2)))
+          .then(
+              invocation -> {
+                callCount2.addAndGet(1);
+                return Uni.createFrom().failure(new RuntimeException("Insert 2 failed"));
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(
+                  COMMAND_CONTEXT_NON_VECTOR, List.of(shredDocument1, shredDocument2), false)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
               .awaitItem()
               .getItem();
 
-      // assert query execution
-      // second query never executed
-      insertFirstAssert.assertExecuteCount().isOne();
-      insertSecondAssert.assertExecuteCount().isOne();
+      // assert query execution: both called
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount1.get()).isEqualTo(1);
 
       // then result has 2 errors
       CommandResult result = execute.get();
@@ -892,10 +670,13 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
           .hasSize(2)
           .extracting(CommandResult.Error::message)
           .containsExactlyInAnyOrder(
-              "Failed to insert document with _id 'doc1': Ivan breaks the test.",
-              "Failed to insert document with _id 'doc2': Ivan really breaks the test.");
+              "Failed to insert document with _id 'doc1': Insert 1 failed",
+              "Failed to insert document with _id 'doc2': Insert 2 failed");
     }
+  }
 
+  @Nested
+  class InsertVector {
     @Test
     public void insertOneVectorSearch() throws Exception {
       String document =
@@ -916,39 +697,21 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode = objectMapper.readTree(document);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
 
-      String insertCql = INSERT_VECTOR_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  CustomValueSerializers.getVectorValue(shredDocument.queryVectorValues()))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt = vectorInsertStatement(shredDocument);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
 
-      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT_VECTOR, shredDocument);
+      when(queryExecutor.executeWrite(eq(insertStmt)))
+          .then(
+              invocation -> {
+                callCount.incrementAndGet();
+                return Uni.createFrom().item(results);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(COMMAND_CONTEXT_VECTOR, shredDocument)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -956,7 +719,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -985,39 +748,21 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
       JsonNode jsonNode = objectMapper.readTree(document);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
 
-      String insertCql = INSERT_VECTOR_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      ValidatingStargateBridge.QueryAssert insertAssert =
-          withQuery(
-                  insertCql,
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  CustomValueSerializers.getVectorValue(shredDocument.queryVectorValues()))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement insertStmt = vectorInsertStatement(shredDocument);
+      List<Row> rows = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results = new MockAsyncResultSet(COLUMNS_APPLIED, rows, null);
+      final AtomicInteger callCount = new AtomicInteger();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
 
-      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT_VECTOR, shredDocument);
+      when(queryExecutor.executeWrite(eq(insertStmt)))
+          .then(
+              invocation -> {
+                callCount.incrementAndGet();
+                return Uni.createFrom().item(results);
+              });
+
       Supplier<CommandResult> execute =
-          operation
+          new InsertOperation(COMMAND_CONTEXT_VECTOR, shredDocument)
               .execute(queryExecutor)
               .subscribe()
               .withSubscriber(UniAssertSubscriber.create())
@@ -1025,7 +770,7 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
               .getItem();
 
       // assert query execution
-      insertAssert.assertExecuteCount().isOne();
+      assertThat(callCount.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1054,11 +799,51 @@ public class InsertOperationTest extends AbstractValidatingStargateBridgeTest {
 
       JsonNode jsonNode = objectMapper.readTree(document);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT, shredDocument);
+      InsertOperation operation = new InsertOperation(COMMAND_CONTEXT_NON_VECTOR, shredDocument);
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
       Throwable failure = catchThrowable(() -> operation.execute(queryExecutor));
       assertThat(failure)
           .isInstanceOf(JsonApiException.class)
           .hasFieldOrPropertyWithValue("errorCode", ErrorCode.VECTOR_SEARCH_NOT_SUPPORTED);
     }
+  }
+
+  private MockRow resultRow(ColumnDefinitions columnDefs, int index, Object... values) {
+    List<ByteBuffer> buffers = Stream.of(values).map(value -> byteBufferFromAny(value)).toList();
+    return new MockRow(columnDefs, index, buffers);
+  }
+
+  private SimpleStatement nonVectorInsertStatement(WritableShreddedDocument shredDocument) {
+    String insertCql = INSERT_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    return SimpleStatement.newInstance(
+        insertCql,
+        CQLBindValues.getDocumentIdValue(shredDocument.id()),
+        shredDocument.docJson(),
+        CQLBindValues.getSetValue(shredDocument.existKeys()),
+        CQLBindValues.getIntegerMapValues(shredDocument.arraySize()),
+        shredDocument.arrayContains(),
+        CQLBindValues.getBooleanMapValues(shredDocument.queryBoolValues()),
+        CQLBindValues.getDoubleMapValues(shredDocument.queryNumberValues()),
+        CQLBindValues.getStringMapValues(shredDocument.queryTextValues()),
+        CQLBindValues.getSetValue(shredDocument.queryNullValues()),
+        CQLBindValues.getTimestampMapValues(shredDocument.queryTimestampValues()));
+  }
+
+  private SimpleStatement vectorInsertStatement(WritableShreddedDocument shredDocument) {
+    String insertCql = INSERT_VECTOR_CQL.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    return SimpleStatement.newInstance(
+        insertCql,
+        CQLBindValues.getDocumentIdValue(shredDocument.id()),
+        shredDocument.docJson(),
+        CQLBindValues.getSetValue(shredDocument.existKeys()),
+        CQLBindValues.getIntegerMapValues(shredDocument.arraySize()),
+        shredDocument.arrayContains(),
+        CQLBindValues.getBooleanMapValues(shredDocument.queryBoolValues()),
+        CQLBindValues.getDoubleMapValues(shredDocument.queryNumberValues()),
+        CQLBindValues.getStringMapValues(shredDocument.queryTextValues()),
+        CQLBindValues.getSetValue(shredDocument.queryNullValues()),
+        CQLBindValues.getTimestampMapValues(shredDocument.queryTimestampValues()),
+        CQLBindValues.getVectorValue(shredDocument.queryVectorValues()));
   }
 }
