@@ -1,19 +1,22 @@
 package io.stargate.sgv2.jsonapi.service.operation.model.impl;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
+import com.datastax.oss.driver.api.core.cql.AsyncResultSet;
+import com.datastax.oss.driver.api.core.cql.ColumnDefinitions;
+import com.datastax.oss.driver.api.core.cql.Row;
+import com.datastax.oss.driver.api.core.cql.SimpleStatement;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.TestProfile;
+import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.helpers.test.UniAssertSubscriber;
-import io.stargate.bridge.grpc.TypeSpecs;
-import io.stargate.bridge.grpc.Values;
-import io.stargate.bridge.proto.QueryOuterClass;
-import io.stargate.sgv2.api.common.config.QueriesConfig;
-import io.stargate.sgv2.common.bridge.AbstractValidatingStargateBridgeTest;
-import io.stargate.sgv2.common.bridge.ValidatingStargateBridge;
 import io.stargate.sgv2.common.testprofiles.NoGlobalResourcesTestProfile;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandContext;
 import io.stargate.sgv2.jsonapi.api.model.command.CommandResult;
@@ -24,7 +27,7 @@ import io.stargate.sgv2.jsonapi.api.model.command.clause.update.UpdateClause;
 import io.stargate.sgv2.jsonapi.api.model.command.clause.update.UpdateOperator;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.CollectionSettings;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
-import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CustomValueSerializers;
+import io.stargate.sgv2.jsonapi.service.cqldriver.serializer.CQLBindValues;
 import io.stargate.sgv2.jsonapi.service.operation.model.ReadType;
 import io.stargate.sgv2.jsonapi.service.projection.DocumentProjector;
 import io.stargate.sgv2.jsonapi.service.shredding.Shredder;
@@ -32,20 +35,24 @@ import io.stargate.sgv2.jsonapi.service.shredding.model.DocValueHasher;
 import io.stargate.sgv2.jsonapi.service.shredding.model.DocumentId;
 import io.stargate.sgv2.jsonapi.service.shredding.model.WritableShreddedDocument;
 import io.stargate.sgv2.jsonapi.service.testutil.DocumentUpdaterUtils;
+import io.stargate.sgv2.jsonapi.service.testutil.MockAsyncResultSet;
+import io.stargate.sgv2.jsonapi.service.testutil.MockRow;
 import io.stargate.sgv2.jsonapi.service.updater.DocumentUpdater;
 import jakarta.inject.Inject;
+import java.nio.ByteBuffer;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 @QuarkusTest
-@Disabled
 @TestProfile(NoGlobalResourcesTestProfile.Impl.class)
-public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridgeTest {
+public class ReadAndUpdateOperationTest extends OperationTestBase {
   private static final String KEYSPACE_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final String COLLECTION_NAME = RandomStringUtils.randomAlphanumeric(16);
   private static final CommandContext COMMAND_CONTEXT =
@@ -53,12 +60,20 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
   private static final CommandContext COMMAND_VECTOR_CONTEXT =
       new CommandContext(
-          KEYSPACE_NAME, COLLECTION_NAME, true, CollectionSettings.SimilarityFunction.COSINE, null);
+          KEYSPACE_NAME,
+          COLLECTION_NAME,
+          new CollectionSettings(
+              COLLECTION_NAME,
+              true,
+              -1,
+              CollectionSettings.SimilarityFunction.COSINE,
+              null,
+              null,
+              null),
+          null);
 
   @Inject Shredder shredder;
   @Inject ObjectMapper objectMapper;
-  @Inject QueryExecutor queryExecutor;
-  @Inject QueriesConfig queriesConfig;
 
   private static String UPDATE =
       "UPDATE \"%s\".\"%s\" "
@@ -97,15 +112,73 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
           + "        IF "
           + "            tx_id = ?";
 
+  private final ColumnDefinitions KEY_TXID_JSON_COLUMNS =
+      buildColumnDefs(
+          TestColumn.keyColumn(), TestColumn.ofUuid("tx_id"), TestColumn.ofVarchar("doc_json"));
+
+  private MockRow resultRow(ColumnDefinitions columnDefs, int index, Object... values) {
+    List<ByteBuffer> buffers = Stream.of(values).map(value -> byteBufferFromAny(value)).toList();
+    return new MockRow(columnDefs, index, buffers);
+  }
+
+  private MockRow resultRow(int index, String key, UUID txId, String doc) {
+    return new MockRow(
+        KEY_TXID_JSON_COLUMNS,
+        index,
+        Arrays.asList(byteBufferForKey(key), byteBufferFrom(txId), byteBufferFrom(doc)));
+  }
+
+  private final ColumnDefinitions COLUMNS_APPLIED =
+      buildColumnDefs(TestColumn.ofBoolean("[applied]"));
+
+  private SimpleStatement nonVectorUpdateStatement(
+      WritableShreddedDocument shredDocument, UUID tx_id) {
+    String updateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    return SimpleStatement.newInstance(
+        updateCql,
+        CQLBindValues.getSetValue(shredDocument.existKeys()),
+        CQLBindValues.getIntegerMapValues(shredDocument.arraySize()),
+        CQLBindValues.getStringSetValue(shredDocument.arrayContains()),
+        CQLBindValues.getBooleanMapValues(shredDocument.queryBoolValues()),
+        CQLBindValues.getDoubleMapValues(shredDocument.queryNumberValues()),
+        CQLBindValues.getStringMapValues(shredDocument.queryTextValues()),
+        CQLBindValues.getSetValue(shredDocument.queryNullValues()),
+        CQLBindValues.getTimestampMapValues(shredDocument.queryTimestampValues()),
+        shredDocument.docJson(),
+        CQLBindValues.getDocumentIdValue(shredDocument.id()),
+        tx_id);
+  }
+
+  private SimpleStatement vectorUpdateStatement(
+      WritableShreddedDocument shredDocument, UUID tx_id) {
+    String updateCql = UPDATE_VECTOR.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+    return SimpleStatement.newInstance(
+        updateCql,
+        CQLBindValues.getSetValue(shredDocument.existKeys()),
+        CQLBindValues.getIntegerMapValues(shredDocument.arraySize()),
+        CQLBindValues.getStringSetValue(shredDocument.arrayContains()),
+        CQLBindValues.getBooleanMapValues(shredDocument.queryBoolValues()),
+        CQLBindValues.getDoubleMapValues(shredDocument.queryNumberValues()),
+        CQLBindValues.getStringMapValues(shredDocument.queryTextValues()),
+        CQLBindValues.getSetValue(shredDocument.queryNullValues()),
+        CQLBindValues.getTimestampMapValues(shredDocument.queryTimestampValues()),
+        CQLBindValues.getVectorValue(shredDocument.queryVectorValues()),
+        shredDocument.docJson(),
+        CQLBindValues.getDocumentIdValue(shredDocument.id()),
+        tx_id);
+  }
+
   @Nested
   class UpdateOne {
     @Test
     public void happyPath() throws Exception {
+      UUID tx_id = UUID.randomUUID();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
       String doc1 =
           """
             {
@@ -113,77 +186,17 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               "username": "user1"
             }
             """;
-
-      String doc1Updated =
-          """
-            {
-              "_id": "doc1",
-              "username": "user1",
-              "$vector" : [0.11,0.22,0.33,0.44]
-            }
-            """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1))));
-
-      String collectionUpdateCql = UPDATE_VECTOR.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
-      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  CustomValueSerializers.getVectorValue(shredDocument.queryVectorValues()),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id, doc1));
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -192,6 +205,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               new DBFilterBase.IDFilter(
                   DBFilterBase.IDFilter.Operator.EQ, DocumentId.fromString("doc1")));
       implicitAnd.comparisonExpressions.get(0).setDBFilters(filters);
+
       FindOperation findOperation =
           FindOperation.unsortedSingle(
               COMMAND_VECTOR_CONTEXT,
@@ -199,6 +213,29 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               DocumentProjector.identityProjector(),
               ReadType.DOCUMENT,
               objectMapper);
+
+      // update
+      String doc1Updated =
+          """
+            {
+              "_id": "doc1",
+              "username": "user1",
+              "$vector" : [0.11,0.22,0.33,0.44]
+            }
+            """;
+
+      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
+      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = vectorUpdateStatement(shredDocument, tx_id);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       String updateClause =
           """
@@ -228,8 +265,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -242,11 +279,13 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void noChange() throws Exception {
+      UUID tx_id = UUID.randomUUID();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
       String doc1 =
           """
                 {
@@ -254,39 +293,17 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
                   "username": "user1"
                 }
                 """;
-
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1))));
-
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      JsonNode jsonNode = objectMapper.readTree(doc1);
-      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id, doc1));
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -295,6 +312,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               new DBFilterBase.IDFilter(
                   DBFilterBase.IDFilter.Operator.EQ, DocumentId.fromString("doc1")));
       implicitAnd.comparisonExpressions.get(0).setDBFilters(filters);
+
       FindOperation findOperation =
           FindOperation.unsortedSingle(
               COMMAND_CONTEXT,
@@ -303,9 +321,10 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               ReadType.DOCUMENT,
               objectMapper);
 
+      // update
       String updateClause =
           """
-                       { "$set" : { "username" : "user1" }}
+                      { "$set" : { "username" : "user1" }}
                   """;
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct(objectMapper.readValue(updateClause, UpdateClause.class));
@@ -331,7 +350,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -345,135 +364,106 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPathWithSort() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
+      UUID tx_id1 = UUID.randomUUID();
+      UUID tx_id2 = UUID.randomUUID();
       String collectionReadCql =
           "SELECT key, tx_id, doc_json, query_text_values['username'], query_dbl_values['username'], query_bool_values['username'], query_null_values['username'], query_timestamp_values['username'] FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 10000"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
-      UUID tx_id2 = UUID.randomUUID();
       String doc1 =
           """
-          {
-            "_id": "doc1",
-            "username": "user1",
-            "filter_me" : "happy"
-          }
-          """;
+              {
+                "_id": "doc1",
+                "username": "user1",
+                "filter_me" : "happy"
+              }
+              """;
 
       String doc2 =
           """
-          {
-            "_id": "doc2",
-            "username": "user2",
-            "filter_me" : "happy"
-          }
-          """;
+              {
+                "_id": "doc2",
+                "username": "user2",
+                "filter_me" : "happy"
+              }
+              """;
 
+      ColumnDefinitions SELECT_SORT_RESULT_COLUMNS =
+          buildColumnDefs(
+              TestColumn.keyColumn(),
+              TestColumn.ofUuid("tx_id"),
+              TestColumn.ofVarchar("doc_json"),
+              TestColumn.ofVarchar("query_text_values['username']"),
+              TestColumn.ofDecimal("query_dbl_values['username']"),
+              TestColumn.ofBoolean("query_bool_values['username']"),
+              TestColumn.ofVarchar("query_null_values['username']"),
+              TestColumn.ofTimestamp("query_timestamp_values['username']"));
+
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(
+              collectionReadCql, "filter_me " + new DocValueHasher().getHash("happy").hash());
+      List<Row> rows1 =
+          Arrays.asList(
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc1"))),
+                      byteBufferFrom(tx_id1),
+                      byteBufferFrom(doc1),
+                      byteBufferFrom("user1"),
+                      null,
+                      null,
+                      null,
+                      null)),
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc2"))),
+                      byteBufferFrom(tx_id2),
+                      byteBufferFrom(doc2),
+                      byteBufferFrom("user2"),
+                      null,
+                      null,
+                      null,
+                      null)));
+      AsyncResultSet results1 = new MockAsyncResultSet(SELECT_SORT_RESULT_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
+
+      // update
       String doc1Updated =
           """
-          {
-            "_id": "doc1",
-            "username": "user1",
-            "filter_me" : "happy",
-            "name" : "test"
-          }
-          """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of("filter_me " + new DocValueHasher().getHash("happy").hash()))
-              .withPageSize(100)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_text_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_dbl_values['username']")
-                          .setType(TypeSpecs.DECIMAL)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_bool_values['username']")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_null_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_timestamp_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1),
-                          Values.of("user1"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL),
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc2"))),
-                          Values.of(tx_id2),
-                          Values.of(doc2),
-                          Values.of("user2"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL)));
-
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+              {
+                "_id": "doc1",
+                "username": "user1",
+                "filter_me" : "happy",
+                "name" : "test"
+              }
+              """;
       JsonNode jsonNode = objectMapper.readTree(doc1Updated);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, tx_id1);
 
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -482,6 +472,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               new DBFilterBase.TextFilter(
                   "filter_me", DBFilterBase.MapFilterBase.Operator.EQ, "happy"));
       implicitAnd.comparisonExpressions.get(0).setDBFilters(filters);
+
       FindOperation findOperation =
           FindOperation.sorted(
               COMMAND_CONTEXT,
@@ -522,8 +513,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -536,92 +527,32 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPathReplace() throws Exception {
+      UUID tx_id = UUID.randomUUID();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
       String doc1 =
           """
-            {
-              "_id": "doc1",
-              "username": "user1"
-            }
-            """;
-      String replacement =
-          """
-              {
-                "name" : "test"
-              }
-              """;
-      String doc1Updated =
-          """
-            {
-              "_id": "doc1",
-              "name" : "test"
-            }
-            """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1))));
+                {
+                  "_id": "doc1",
+                  "username": "user1"
+                }
+                """;
 
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
-      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList(resultRow(0, "doc1", tx_id, doc1));
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -630,6 +561,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               new DBFilterBase.IDFilter(
                   DBFilterBase.IDFilter.Operator.EQ, DocumentId.fromString("doc1")));
       implicitAnd.comparisonExpressions.get(0).setDBFilters(filters);
+
       FindOperation findOperation =
           FindOperation.unsortedSingle(
               COMMAND_CONTEXT,
@@ -638,6 +570,34 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               ReadType.DOCUMENT,
               objectMapper);
 
+      // update
+      String doc1Updated =
+          """
+                {
+                  "_id": "doc1",
+                  "name" : "test"
+                }
+                """;
+      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
+      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, tx_id);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
+
+      String replacement =
+          """
+                  {
+                    "name" : "test"
+                  }
+                  """;
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct((ObjectNode) objectMapper.readTree(replacement));
       ReadAndUpdateOperation operation =
@@ -662,8 +622,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -676,77 +636,32 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPathReplaceUpsert() throws Exception {
+      UUID tx_id = UUID.randomUUID();
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      String replacement =
-          """
-                  {
-                    "name" : "test"
-                  }
-                  """;
-      String doc1Updated =
+      String doc1_select_update =
           """
                 {
                   "_id": "doc1",
-                  "name" : "test"
+                  "name": "test"
                 }
                 """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(List.of());
 
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
-      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.NULL)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList();
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -763,6 +678,27 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               DocumentProjector.identityProjector(),
               ReadType.DOCUMENT,
               objectMapper);
+
+      // update
+      JsonNode jsonNode = objectMapper.readTree(doc1_select_update);
+      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, null);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
+
+      String replacement =
+          """
+                  {
+                    "name" : "test"
+                  }
+                  """;
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct((ObjectNode) objectMapper.readTree(replacement));
       ReadAndUpdateOperation operation =
@@ -787,8 +723,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -802,144 +738,106 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPathReplaceWithSort() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
+      UUID tx_id1 = UUID.randomUUID();
+      UUID tx_id2 = UUID.randomUUID();
       String collectionReadCql =
           "SELECT key, tx_id, doc_json, query_text_values['username'], query_dbl_values['username'], query_bool_values['username'], query_null_values['username'], query_timestamp_values['username'] FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 10000"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
-      UUID tx_id2 = UUID.randomUUID();
       String doc1 =
           """
-          {
-            "_id": "doc1",
-            "username": "user1",
-            "filter_me" : "happy"
-          }
-          """;
+              {
+                "_id": "doc1",
+                "username": "user1",
+                "filter_me" : "happy"
+              }
+              """;
 
       String doc2 =
           """
-          {
-            "_id": "doc2",
-            "username": "user2",
-            "filter_me" : "happy"
-          }
-          """;
+              {
+                "_id": "doc2",
+                "username": "user2",
+                "filter_me" : "happy"
+              }
+              """;
+      ColumnDefinitions SELECT_SORT_RESULT_COLUMNS =
+          buildColumnDefs(
+              TestColumn.keyColumn(),
+              TestColumn.ofUuid("tx_id"),
+              TestColumn.ofVarchar("doc_json"),
+              TestColumn.ofVarchar("query_text_values['username']"),
+              TestColumn.ofDecimal("query_dbl_values['username']"),
+              TestColumn.ofBoolean("query_bool_values['username']"),
+              TestColumn.ofVarchar("query_null_values['username']"),
+              TestColumn.ofTimestamp("query_timestamp_values['username']"));
 
-      String replacement =
-          """
-          {
-            "username": "user1",
-            "filter_me" : "happy",
-            "name" : "test"
-          }
-          """;
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(
+              collectionReadCql, "filter_me " + new DocValueHasher().getHash("happy").hash());
+      List<Row> rows1 =
+          Arrays.asList(
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc1"))),
+                      byteBufferFrom(tx_id1),
+                      byteBufferFrom(doc1),
+                      byteBufferFrom("user1"),
+                      null,
+                      null,
+                      null,
+                      null)),
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc2"))),
+                      byteBufferFrom(tx_id2),
+                      byteBufferFrom(doc2),
+                      byteBufferFrom("user2"),
+                      null,
+                      null,
+                      null,
+                      null)));
+      AsyncResultSet results1 = new MockAsyncResultSet(SELECT_SORT_RESULT_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
+      // update
       String doc1Updated =
           """
-          {
-            "_id": "doc1",
-            "username": "user1",
-            "filter_me" : "happy",
-            "name" : "test"
-          }
-          """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of("filter_me " + new DocValueHasher().getHash("happy").hash()))
-              .withPageSize(100)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_text_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_dbl_values['username']")
-                          .setType(TypeSpecs.DECIMAL)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_bool_values['username']")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_null_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_timestamp_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1),
-                          Values.of("user1"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL),
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc2"))),
-                          Values.of(tx_id2),
-                          Values.of(doc2),
-                          Values.of("user2"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL)));
+              {
+                "_id": "doc1",
+                "username": "user1",
+                "filter_me" : "happy",
+                "name" : "test"
+              }
+              """;
 
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
       JsonNode jsonNode = objectMapper.readTree(doc1Updated);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, tx_id1);
 
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -960,6 +858,15 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               List.of(new FindOperation.OrderBy("username", true)),
               0,
               10000);
+
+      String replacement =
+          """
+              {
+                "username": "user1",
+                "filter_me" : "happy",
+                "name" : "test"
+              }
+              """;
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct((ObjectNode) objectMapper.readTree(replacement));
       ReadAndUpdateOperation operation =
@@ -984,8 +891,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -998,135 +905,106 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPathWithSortDescending() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
+      UUID tx_id1 = UUID.randomUUID();
+      UUID tx_id2 = UUID.randomUUID();
       String collectionReadCql =
           "SELECT key, tx_id, doc_json, query_text_values['username'], query_dbl_values['username'], query_bool_values['username'], query_null_values['username'], query_timestamp_values['username'] FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 10000"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
-
-      UUID tx_id = UUID.randomUUID();
-      UUID tx_id2 = UUID.randomUUID();
       String doc1 =
           """
-            {
-              "_id": "doc1",
-              "username": "user1",
-              "filter_me" : "happy"
-            }
-            """;
+              {
+                "_id": "doc1",
+                "username": "user1",
+                "filter_me" : "happy"
+              }
+              """;
 
       String doc2 =
           """
-            {
-              "_id": "doc2",
-              "username": "user2",
-              "filter_me" : "happy"
-            }
-            """;
+              {
+                "_id": "doc2",
+                "username": "user2",
+                "filter_me" : "happy"
+              }
+              """;
 
+      ColumnDefinitions SELECT_SORT_RESULT_COLUMNS =
+          buildColumnDefs(
+              TestColumn.keyColumn(),
+              TestColumn.ofUuid("tx_id"),
+              TestColumn.ofVarchar("doc_json"),
+              TestColumn.ofVarchar("query_text_values['username']"),
+              TestColumn.ofDecimal("query_dbl_values['username']"),
+              TestColumn.ofBoolean("query_bool_values['username']"),
+              TestColumn.ofVarchar("query_null_values['username']"),
+              TestColumn.ofTimestamp("query_timestamp_values['username']"));
+
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(
+              collectionReadCql, "filter_me " + new DocValueHasher().getHash("happy").hash());
+      List<Row> rows1 =
+          Arrays.asList(
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc1"))),
+                      byteBufferFrom(tx_id1),
+                      byteBufferFrom(doc1),
+                      byteBufferFrom("user1"),
+                      null,
+                      null,
+                      null,
+                      null)),
+              new MockRow(
+                  SELECT_SORT_RESULT_COLUMNS,
+                  0,
+                  Arrays.asList(
+                      byteBufferFrom(
+                          CQLBindValues.getDocumentIdValue(DocumentId.fromString("doc2"))),
+                      byteBufferFrom(tx_id2),
+                      byteBufferFrom(doc2),
+                      byteBufferFrom("user2"),
+                      null,
+                      null,
+                      null,
+                      null)));
+      AsyncResultSet results1 = new MockAsyncResultSet(SELECT_SORT_RESULT_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
+
+      // update
       String doc2Updated =
           """
-            {
-              "_id": "doc2",
-              "username": "user2",
-              "filter_me" : "happy",
-              "name" : "test"
-            }
-            """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of("filter_me " + new DocValueHasher().getHash("happy").hash()))
-              .withPageSize(100)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_text_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_dbl_values['username']")
-                          .setType(TypeSpecs.DECIMAL)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_bool_values['username']")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_null_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("query_timestamp_values['username']")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id),
-                          Values.of(doc1),
-                          Values.of("user1"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL),
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc2"))),
-                          Values.of(tx_id2),
-                          Values.of(doc2),
-                          Values.of("user2"),
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL,
-                          Values.NULL)));
-
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+                {
+                  "_id": "doc2",
+                  "username": "user2",
+                  "filter_me" : "happy",
+                  "name" : "test"
+                }
+                """;
       JsonNode jsonNode = objectMapper.readTree(doc2Updated);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, tx_id2);
 
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id2))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1135,6 +1013,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               new DBFilterBase.TextFilter(
                   "filter_me", DBFilterBase.MapFilterBase.Operator.EQ, "happy"));
       implicitAnd.comparisonExpressions.get(0).setDBFilters(filters);
+
       FindOperation findOperation =
           FindOperation.sortedSingle(
               COMMAND_CONTEXT,
@@ -1151,6 +1030,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
           DocumentUpdater.construct(
               DocumentUpdaterUtils.updateClause(
                   UpdateOperator.SET, objectMapper.createObjectNode().put("name", "test")));
+
       ReadAndUpdateOperation operation =
           new ReadAndUpdateOperation(
               COMMAND_CONTEXT,
@@ -1173,8 +1053,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1187,71 +1067,24 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void withUpsert() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-      String doc1Updated =
-          """
-              {
-                "_id": "doc1",
-                "name" : "test"
-              }
-              """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(List.of());
-
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
-      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
-      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.NULL)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList();
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1268,6 +1101,28 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               DocumentProjector.identityProjector(),
               ReadType.DOCUMENT,
               objectMapper);
+
+      // update
+      String doc1Updated =
+          """
+                {
+                  "_id": "doc1",
+                  "name" : "test"
+                }
+                """;
+
+      JsonNode jsonNode = objectMapper.readTree(doc1Updated);
+      WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, null);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct(
@@ -1295,8 +1150,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1310,31 +1165,23 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void noData() {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 1"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(1)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(List.of());
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList();
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1351,6 +1198,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               DocumentProjector.identityProjector(),
               ReadType.DOCUMENT,
               objectMapper);
+
+      // update
       DocumentUpdater documentUpdater =
           DocumentUpdater.construct(
               DocumentUpdaterUtils.updateClause(
@@ -1377,7 +1226,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1394,6 +1243,9 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void happyPath() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 21"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
@@ -1402,138 +1254,82 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
       UUID tx_id2 = UUID.randomUUID();
       String doc1 =
           """
-              {
-                "_id": "doc1",
-                "username": "user1",
-                "status" : "active"
-              }
-              """;
+                      {
+                        "_id": "doc1",
+                        "username": "user1",
+                        "status" : "active"
+                      }
+                      """;
 
       String doc1Updated =
           """
-              {
-                "_id": "doc1",
-                "username": "user1",
-                "status" : "active",
-                "name" : "test"
-              }
-              """;
+                      {
+                        "_id": "doc1",
+                        "username": "user1",
+                        "status" : "active",
+                        "name" : "test"
+                      }
+                      """;
 
       String doc2 =
           """
-              {
-                "_id": "doc2",
-                "username": "user2",
-                "status" : "active"
-              }
-              """;
+                      {
+                        "_id": "doc2",
+                        "username": "user2",
+                        "status" : "active"
+                      }
+                      """;
 
       String doc2Updated =
           """
-              {
-                "_id": "doc2",
-                "username": "user2",
-                "status" : "active",
-                "name" : "test"
-              }
-              """;
+                      {
+                        "_id": "doc2",
+                        "username": "user2",
+                        "status" : "active",
+                        "name" : "test"
+                      }
+                      """;
 
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(collectionReadCql, Values.of("status Sactive"))
-              .withPageSize(20)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(
-                  List.of(
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc1"))),
-                          Values.of(tx_id1),
-                          Values.of(doc1)),
-                      List.of(
-                          Values.of(
-                              CustomValueSerializers.getDocumentIdValue(
-                                  DocumentId.fromString("doc2"))),
-                          Values.of(tx_id2),
-                          Values.of(doc2))));
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(
+              collectionReadCql, "status " + new DocValueHasher().getHash("active").hash());
+      List<Row> rows1 =
+          Arrays.asList(resultRow(0, "doc1", tx_id1, doc1), resultRow(0, "doc2", tx_id2, doc2));
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+      // update
       JsonNode jsonNode = objectMapper.readTree(doc1Updated);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateFirstQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id1))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, tx_id1);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       jsonNode = objectMapper.readTree(doc2Updated);
       shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert updateSecondQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.of(tx_id2))
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt3 = nonVectorUpdateStatement(shredDocument, tx_id2);
+      List<Row> rows3 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results3 = new MockAsyncResultSet(COLUMNS_APPLIED, rows3, null);
+      final AtomicInteger callCount3 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt3)))
+          .then(
+              invocation -> {
+                callCount3.incrementAndGet();
+                return Uni.createFrom().item(results3);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1579,9 +1375,9 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      updateFirstQueryAssert.assertExecuteCount().isOne();
-      updateSecondQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
+      assertThat(callCount3.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1594,71 +1390,44 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void withUpsert() throws Exception {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE key = ? LIMIT 21"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(collectionReadCql, boundKeyForStatement("doc1"));
+      List<Row> rows1 = Arrays.asList();
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
+
+      // update
       String doc1Updated =
           """
-              {
-                "_id": "doc1",
-                "name" : "test"
-              }
-              """;
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(
-                  collectionReadCql,
-                  Values.of(
-                      CustomValueSerializers.getDocumentIdValue(DocumentId.fromString("doc1"))))
-              .withPageSize(20)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(List.of());
-
-      String collectionUpdateCql = UPDATE.formatted(KEYSPACE_NAME, COLLECTION_NAME);
+                  {
+                    "_id": "doc1",
+                    "name" : "test"
+                  }
+                  """;
       JsonNode jsonNode = objectMapper.readTree(doc1Updated);
       WritableShreddedDocument shredDocument = shredder.shred(jsonNode);
-
-      ValidatingStargateBridge.QueryAssert upsertQueryAssert =
-          withQuery(
-                  collectionUpdateCql,
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.existKeys())),
-                  Values.of(CustomValueSerializers.getIntegerMapValues(shredDocument.arraySize())),
-                  Values.of(
-                      CustomValueSerializers.getStringSetValue(shredDocument.arrayContains())),
-                  Values.of(
-                      CustomValueSerializers.getBooleanMapValues(shredDocument.queryBoolValues())),
-                  Values.of(
-                      CustomValueSerializers.getDoubleMapValues(shredDocument.queryNumberValues())),
-                  Values.of(
-                      CustomValueSerializers.getStringMapValues(shredDocument.queryTextValues())),
-                  Values.of(CustomValueSerializers.getSetValue(shredDocument.queryNullValues())),
-                  Values.of(
-                      CustomValueSerializers.getTimestampMapValues(
-                          shredDocument.queryTimestampValues())),
-                  Values.of(shredDocument.docJson()),
-                  Values.of(CustomValueSerializers.getDocumentIdValue(shredDocument.id())),
-                  Values.NULL)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("applied")
-                          .setType(TypeSpecs.BOOLEAN)
-                          .build()))
-              .withSerialConsistency(queriesConfig.serialConsistency())
-              .returning(List.of(List.of(Values.of(true))));
+      SimpleStatement stmt2 = nonVectorUpdateStatement(shredDocument, null);
+      List<Row> rows2 = Arrays.asList(resultRow(COLUMNS_APPLIED, 0, Boolean.TRUE));
+      AsyncResultSet results2 = new MockAsyncResultSet(COLUMNS_APPLIED, rows2, null);
+      final AtomicInteger callCount2 = new AtomicInteger();
+      when(queryExecutor.executeWrite(eq(stmt2)))
+          .then(
+              invocation -> {
+                callCount2.incrementAndGet();
+                return Uni.createFrom().item(results2);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1704,8 +1473,8 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
-      upsertQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
+      assertThat(callCount2.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
@@ -1719,28 +1488,24 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
 
     @Test
     public void noData() {
+      QueryExecutor queryExecutor = mock(QueryExecutor.class);
+      // read
       String collectionReadCql =
           "SELECT key, tx_id, doc_json FROM \"%s\".\"%s\" WHERE array_contains CONTAINS ? LIMIT 21"
               .formatted(KEYSPACE_NAME, COLLECTION_NAME);
 
-      ValidatingStargateBridge.QueryAssert selectQueryAssert =
-          withQuery(collectionReadCql, Values.of("status Sactive"))
-              .withPageSize(20)
-              .withColumnSpec(
-                  List.of(
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("key")
-                          .setType(TypeSpecs.tuple(TypeSpecs.TINYINT, TypeSpecs.VARCHAR))
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("tx_id")
-                          .setType(TypeSpecs.UUID)
-                          .build(),
-                      QueryOuterClass.ColumnSpec.newBuilder()
-                          .setName("doc_json")
-                          .setType(TypeSpecs.VARCHAR)
-                          .build()))
-              .returning(List.of());
+      SimpleStatement stmt1 =
+          SimpleStatement.newInstance(
+              collectionReadCql, "status " + new DocValueHasher().getHash("active").hash());
+      List<Row> rows1 = Arrays.asList();
+      AsyncResultSet results1 = new MockAsyncResultSet(KEY_TXID_JSON_COLUMNS, rows1, null);
+      final AtomicInteger callCount1 = new AtomicInteger();
+      when(queryExecutor.executeRead(eq(stmt1), any(), anyInt()))
+          .then(
+              invocation -> {
+                callCount1.incrementAndGet();
+                return Uni.createFrom().item(results1);
+              });
 
       LogicalExpression implicitAnd = LogicalExpression.and();
       implicitAnd.comparisonExpressions.add(new ComparisonExpression(null, null, null));
@@ -1786,7 +1551,7 @@ public class ReadAndUpdateOperationTest extends AbstractValidatingStargateBridge
               .getItem();
 
       // assert query execution
-      selectQueryAssert.assertExecuteCount().isOne();
+      assertThat(callCount1.get()).isEqualTo(1);
 
       // then result
       CommandResult result = execute.get();
